buildSrc/known-failures/1.4.20/functions-to-extension-methods.4.log
> Task :compileTestJava FAILED
src/test/java/travelator/marketing/HighValueCustomersReportTests.java:48: error: cannot find symbol
            HighValueCustomersReport.customerDataFrom("1\tFred\tFlintstone\t0")
                                    ^
  symbol:   method customerDataFrom(String)
  location: class HighValueCustomersReport
1 error

